--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,9 +1,9 @@
 .App {
   text-align: center;
+  box-sizing: border-box;
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
